<resources>
    <string name="app_name">Cold_Chain_Logistic</string>
    <!--实现加下划线-->
    <string name="login_login"><b>现在注册</b></string>


    <!--common-->
    <string name="username">账户</string>
    <string name="username_hint">请输入账户</string>
    <string name="pwd">密码</string>
    <string name="pwd_hint">请输入密码</string>



    <!--register-->
    <string name="register_title">用户注册</string>
    <string name="register_pwd_confirm">确认密码</string>
    <string name="register_pwd_confirm_hint">请输入密码</string>
    <string name="register_nickname">昵称</string>
    <string name="register_nickname_hint">请输入昵称</string>
    <string name="register_autograph">个性签名</string>
    <string name="register_autograph_hint">一句话介绍自己</string>

    <!--find_pwd-->
    <string name="find_pwd_phone">手机号</string>
    <string name="find_pwd_phone_hint">请输入手机号</string>
    <string name="find_pwd_validate">验证码</string>
    <string name="find_pwd_validate_hint">请输入验证码</string>



    <!--fg_one-->
    <string name="fg_one_title">普通查询</string>
    <string name="fg_one_et_hint">请输入侦听的IMSI号</string>

    <!--fg_one_show-->
    <string name="fg_one_show_zhen">帧号</string>
    <string name="fg_one_show_IMSI">IMSI号</string>
    <string name="fg_one_show_service">服务器</string>
    <string name="fg_one_show_port">端口</string>
    <string name="fg_one_show_receive">接收时间</string>




    <!--fg_two-->
    <string name="fg_two_title">历史数据</string>
    <string name="fg_two_search">搜索</string>
    <string name="fg_two_hint">请输入IMSI号</string>


    <!--fg_four-->
    <string name="fg_four_title">我的</string>
    <string name="fg_four_list">我的IMSI号</string>

    <!--fg_four_help-->
    <string name="fg_four_help_title">冷链物流说明书</string>
    <string name="fg_four_help_text">
     冷链物流包含一套将终端UE转发到用户服务器US的通信过程，通过云服务器进行转发。
   NB-IoT终端（UE）是一种以微控制器（MCU）为核心，具有数据采集、控制、运算、NB-IoT通信功能，用于特定功能的软硬件实体。
   NB-IoT信息邮局(MPO)在NB-IoT终端（UE）与NB-IoT人机交互系统（HCI）之间起信息传送的桥梁作用。
   NB-IoT人机交互系统（HCI）是实现人与NB-IoT信息邮局（NB-IoT云服务器）之间信息交互、信息处理与信息服务的软硬件系统。目标是使人们能够利用通用计算机（PC）、笔记本电脑、平板电脑、手机等设备，通过NB-IoT信息邮局MPO，实现获取NB-IoT终端UE的数据，并可实现对终端UE的控制等功能。
    </string>

</resources>
