<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/bg_register"

    >


    <com.example.hp.cold_chain_logistic.ui.TitleActivityLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.example.hp.cold_chain_logistic.ui.TitleActivityLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_weight="1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@mipmap/ic_fragment_4_image_defalut"
        app:civ_border_color="#FFFFFF"
        android:layout_gravity="center_horizontal"
        app:civ_border_width="2dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <TextView
            style="@style/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="用户注册"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_intro"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <EditText
                style="@style/edit"
                android:layout_width="match_parent"
                android:hint="@string/username_hint" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_intro"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/register_nickname" />

            <EditText
                style="@style/edit"
                android:layout_width="match_parent"
                android:hint="@string/register_nickname_hint" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_intro"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/register_autograph" />

            <EditText
                style="@style/edit"
                android:layout_width="match_parent"
                android:hint="@string/register_autograph_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_intro"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/pwd" />

            <EditText
                style="@style/edit"
                android:layout_width="match_parent"
                android:hint="@string/pwd_hint" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_intro"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/register_pwd_confirm" />

            <EditText
                style="@style/edit"
                android:layout_width="match_parent"
                android:hint="@string/register_pwd_confirm_hint" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/btn"
            android:text="注                  册"
            />

    </LinearLayout>


</LinearLayout>
