<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGreyLight"
    >


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        style="@style/text_title"
        android:text="@string/fg_two_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_shape_grey"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/sp_fg_two"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/et_fg_two_input"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:layout_marginRight="10dp"
                style="@style/edit"
                android:hint="@string/fg_two_hint"
                />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_fg_two_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/text_intro"
            android:text="@string/fg_two_search" />
    </LinearLayout>

    <GridView
        android:id="@+id/gv_fg_two"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:numColumns="2"
        android:padding="20dp">

    </GridView>

</LinearLayout>
