<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hp.cold_chain_logistic.activity.LoginActivity">


    <ImageView
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:id="@+id/imageView33"
        android:layout_width="399dp"
        android:layout_height="188dp"
        android:scaleType="fitXY"
        android:src="@mipmap/bg_login"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="351dp"
        android:layout_height="46dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-28dp"
        tools:layout_editor_absoluteY="195dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_perm_identity_grey_500_24dp" />

        <EditText
            android:id="@+id/et_account"
            style="@style/edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="25dp"
            android:hint="@string/username_hint" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="351dp"
        android:layout_height="46dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-28dp"
        tools:layout_editor_absoluteY="195dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_lock_grey_500_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="25dp"
            android:background="@color/colorGreyLight"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_weight="3"
                style="@style/edit"
                android:hint="@string/pwd_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/bt_find_pwd"
                android:layout_width="60dp"
                android:layout_height="33dp"
                android:layout_weight="1"
                android:background="@color/colorGreyDeep"
                android:text="找回密码" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/btn"
        android:layout_marginTop="10dp"
        android:text="登                     录" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="没有账号？    "
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/tv_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:text="@string/login_login" />
    </LinearLayout>



</LinearLayout>
